tests/fixtures/invalid_syntax/unclosed_block.syn
SOURCE @ref2020
    description: Missing end
